Refactor file tree structure

--- a/charte.html
+++ b/charte.html
@@ -7,13 +7,47 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
 
 </head>
+<body>
+        <style>
+                .nav{
+                    display:inline;
+                    background-color: white;
+                    margin-right: 10px;
+                    font-family: Georgia, 'Times New Roman', Times, serif;
+                }
+                nav a{
+                    color:black;
+                }
+                nav a:hover{
+                    background-color: gray;
+                }
+                a{
+                    text-decoration: none;
+                    color:blue;
+                }
+                body{
+                    background-color: black;
+                }
+                h1{
+                    color: white;
+                }
+                h1:hover{
+                    color:red;
+                }
+                li{
+                    color: white;
+                }
+                div{
+                    color: white;
+                }
+            </style>
 
     <nav>
 
         <ul>
 
-            <li><a href="index.html">Acceuil</a></li>
-            <li><a href="charte.html">Signer</a></li>
+            <li class="nav"><a href="index.html">Acceuil</a></li>
+            <li class="nav"><a href="charte.html">Signer</a></li>
 
         </ul>
 
