--- a/index.html
+++ b/index.html
@@ -11,12 +11,47 @@
 
     <body>
 
+        <style>
+        .nav{
+            display:inline;
+            background-color: white;
+            margin-right: 10px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+        nav a{
+            color:black;
+        }
+        nav a:hover{
+            background-color: gray;
+        }
+        a{
+            text-decoration: none;
+            color:blue;
+        }
+        body{
+            background-color: black;
+        }
+        h1{
+            color: white;
+        }
+        h1:hover{
+            color:red;
+        }
+        li{
+            color: white;
+        }
+        div{
+            color: white;
+        }
+</style>
+    </style>
+
         <nav>
 
             <ul>
 
-                <li><a href="index.html">Acceuil</a></li>
-                <li><a href="charte.html">Signer</a></li>
+                <li class="nav"><a href="index.html">Acceuil</a></li>
+                <li class="nav"><a href="charte.html">Signer</a></li>
 
             </ul>
 
@@ -31,7 +66,7 @@
         
         <a href="charte.html">Charte complete</a>
         </center>
-        
+
     </body>
 
 </html>
