Refactor file tree structure

--- a/index.html
+++ b/index.html
@@ -3,48 +3,15 @@
 
     <head>
 
-        <title>Charte</title>
+        <title>Accueil</title>
 
         <meta name="viewport" content="width=device-width, user-scalable=no">
-    
+
+        <link rel="stylesheet" href="style.css">
+
     </head>
 
     <body>
-
-        <style>
-        .nav{
-            display:inline;
-            background-color: white;
-            margin-right: 10px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-        nav a{
-            color:black;
-        }
-        nav a:hover{
-            background-color: gray;
-        }
-        a{
-            text-decoration: none;
-            color:blue;
-        }
-        body{
-            background-color: black;
-        }
-        h1{
-            color: white;
-        }
-        h1:hover{
-            color:red;
-        }
-        li{
-            color: white;
-        }
-        div{
-            color: white;
-        }
-</style>
-    </style>
 
         <nav>
 
@@ -63,8 +30,8 @@
             <h1>2. Etat d'esprit / vision / Hidden war</h1><br>
             <h1>3. Engagements de l'apprenant.e / ligthningcrushers</h1><br>
 
-        
-        <a href="charte.html">Charte complete</a>
+            <a href="charte.html">Charte complete</a>
+
         </center>
 
     </body>
