Refactor file tree structure

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>2. Etat d'esprit / vision / Hidden war</h1><br>
             <h1>3. Engagements de l'apprenant.e / ligthningcrushers</h1><br>
 
-            <a href="charte.html">Charte complete</a>
+            <a class="chartecomplete"href="charte.html">Charte complete</a>
 
         </center>
 
