--- a/charte_black.html
+++ b/charte_black.html
@@ -5,7 +5,7 @@
 <head>
     <title>Charte</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    
+    <link rel="stylesheet" href="style_black.css">
 
 </head>
 <body>
@@ -15,12 +15,19 @@
 
         <ul>
 
-            <li class="nav"><a href="index.html">Acceuil</a></li>
-            <li class="nav"><a href="charte.html">Signer</a></li>
+            <li class="nav"><a href="index_black.html">Acceuil</a></li>
+            <li class="nav"><a href="charte_black.html">Signer</a></li>
 
         </ul>
 
     </nav>
+
+    <ul>
+            <p>Thème :</p>
+            <li class="color"><a href="charte_white.html">Jour</a></li>
+            <li class="color"><a href="charte_black.html">Nuit</a></li>
+
+    </ul>
 
     <h1>Fonctionnement global de la promo / Boon of the tiger</h1>
         
