Refactor file tree structure

--- a/charte_black.html
+++ b/charte_black.html
@@ -15,19 +15,24 @@
 
         <ul>
 
-            <li class="nav"><a href="index_black.html">Acceuil</a></li>
-            <li class="nav"><a href="charte_black.html">Signer</a></li>
+            <li class="nav"><a href="index_black.html"><b>&nbsp;Acceuil&nbsp;</b></a></a></li>
+            <li class="nav"><a href="charte_black.html"><b>&nbsp;Signer&nbsp;</b></a></a></li>
 
         </ul>
 
+        <section>
+
+            <ul>
+
+                <p>Thème :&nbsp;</p>
+                <li class="color"><a href="charte_white.html">Jour</a></li>
+                <li class="color"><a href="charte_black.html">Nuit</a></li>
+
+            </ul>
+
+        </section>
+
     </nav>
-
-    <ul>
-            <p>Thème :</p>
-            <li class="color"><a href="charte_white.html">Jour</a></li>
-            <li class="color"><a href="charte_black.html">Nuit</a></li>
-
-    </ul>
 
     <h1>Fonctionnement global de la promo / Boon of the tiger</h1>
         
