--- a/index_white.html
+++ b/index_white.html
@@ -18,8 +18,8 @@
 
             <ul>
 
-                <li class="nav"><a href="index_white.html">Acceuil</a></li>
-                <li class="nav"><a href="charte_white.html">Signer</a></li>
+                <li class="nav"><a href="index_white.html"><b>&nbsp;Acceuil&nbsp;</b></a></li>
+                <li class="nav"><a href="charte_white.html"><b>&nbsp;Signer&nbsp;</b></a></li>
 
             </ul>
 
