--- a/charte_white.html
+++ b/charte_white.html
@@ -15,8 +15,8 @@
 
         <ul>
 
-            <li class="nav"><a href="index_white.html">Acceuil</a></li>
-            <li class="nav"><a href="charte_white.html">Signer</a></li>
+            <li class="nav"><a href="index_white.html"><b>&nbsp;Acceuil&nbsp;</b></a></a></li>
+            <li class="nav"><a href="charte_white.html"><b>&nbsp;Signer&nbsp;</b></a></a></li>
 
         </ul>
 
